Handle missing image x and y properties